<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aquamarine"
        android:orientation="vertical"
        tools:context="Fragments.MainFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/instructions"
            android:fontFamily="@font/cap_regul"
            android:text="@string/first_instr"
            android:textColor="@color/dark_blue"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/instructions"
            android:fontFamily="@font/cap_regul"
            android:text="@string/rules"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/instructions"
            android:fontFamily="@font/cacp_reg"
            android:textColor="@color/dark_blue"
            android:text="@string/sec_inst"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/instructions"
            android:fontFamily="@font/cap_regul"
            android:text="@string/who_win"
            android:textColor="@color/dark_blue"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/instructions"
            android:fontFamily="@font/cacp_reg"
            android:textColor="@color/dark_blue"
            android:text="@string/third_instr"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>