<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquamarine"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/instructions"
        android:text="@string/settings"
        android:textColor="@color/dark_blue"
        android:textSize="40sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/intim_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/instructions"
        android:checked="false"
        android:text="@string/switch_intim"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:clickable="false"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/instructions"
        android:text="@string/dark_theme"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"

        />

</LinearLayout>