<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquamarine"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/instructions"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="@dimen/instructions"
        android:fontFamily="@font/my_font"
        android:gravity="center"
        android:text="@string/name_app"
        android:textColor="@color/dark_blue"
        android:textSize="160sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/instructions"
        android:backgroundTint="@color/medium_state_blue"
        android:text="@string/start_game"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:cornerRadius="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/instructions"
        android:backgroundTint="@color/medium_state_blue"
        android:text="@string/exit"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:cornerRadius="30dp" />
</LinearLayout>