<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/aquamarine">

        <TextView
            android:id="@+id/first_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_dimen"
            android:text="@string/game_instruction_first"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/second_instruction"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_dimen"
            android:text="@string/game_instruction_second"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/first_instruction" />

        <TextView
            android:id="@+id/third_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_dimen"
            android:text="@string/game_instruction_third"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/second_instruction" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_dimen"
            android:backgroundTint="@color/medium_state_blue"
            android:text="@string/start_question"
            android:textColor="@color/dark_blue"
            android:textSize="30sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>
</FrameLayout>
