<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquamarine"
    tools:context="view.MainGameFragment">

    <TextView
        android:id="@+id/title_statement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/app_dimen"
        android:text="@string/title_statement"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/title_statement" />

    <TextView
        android:id="@+id/exercice_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen"
        android:text="@string/exercise"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/exercice_second" />

    <TextView
        android:id="@+id/exercice_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen"
        android:background="@color/plum"
        android:gravity="center"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_dimen"
        android:backgroundTint="@color/medium_state_blue"
        android:text="@string/next_questions"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>